--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 </head>
 <body>
     <div class="cube">
-        <div class="top"></div>
+        <div class="top">
+            <div>
+                <span style="--j:0;"></span>
+                <span style="--j:1;"></span>
+                <span style="--j:2;"></span>
+                <span style="--j:3;"></span>
+                <span style="--j:4;"></span>
+                <span style="--j:5;"></span>
+            </div>
+
+        </div>
         <div>
             <span style="--i:0;"></span>
             <span style="--i:1;"></span>
             <span style="--i:2;"></span>
             <span style="--i:3;"></span>
+            <span style="--i:4;"></span>
+            <span style="--i:5;"></span>
         </div>
     </div>
 </body>
